metadata/force-app/main/default/objects/CustomName_JiEAT__c/CustomName_JiEAT__c.object-meta.xml
<CustomObject>
    <description>Description_OpjEF</description>
    <label>CustomLabel_jdcHU</label>
    <nameField>
        <label>CustomLabel_jdcHU</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_jdcHUs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>