metadata/force-app/main/default/objects/CustomName_JiEAT__c/fields/CustomField_jdZPC__c.field-meta.xml
<CustomField>
    <fullName>CustomField_jdZPC__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldTNPPN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>